# BrainGenix-NES

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  InitCheck.sh  Install.sh  InstallCPP.sh  InstallDatabase.sh  README.md  SECURITY.md  UnFrackList.txt  default.nix  installer.sh  paper.md  requirements.in  requirements.txt  vcpkg-configuration.json  vcpkg.json
C++/: CMakeLists.txt
C++/CMake/BuildUtils/: PCIIDS.cmake  YAML-CPP.cmake
C++/CMake/Utils/: ColorizeMessages.cmake  DisableTargetWarnings.cmake  SetBinaryDir.cmake
C++/Docs/BlockDiagrams/: BrainGenix-NES.drawio
C++/Docs/Templates/: Template.cpp  Template.h
C++/Sandbox/: test.py
C++/Sandbox/Kafka-C/: Consumer  Consumer.c  Producer  README.md
C++/Sandbox/Kafka-CPP/: Consumer.cpp  README.md
C++/Sandbox/SWIG_example/: CMakeLists.txt
C++/Sandbox/output/: make.deps  network.cpp
C++/Source/: Config.yaml
C++/Tools/: Build.sh  Run.sh
Docs/Templates/: CMakeLists.txt  Template.cpp  Template.h  WidgetTemplate.cpp  WidgetTemplate.h
MSE/: .gitignore  Build.sh  CMakeLists.txt
MSE/Binaries/: BrainGenix-NES
MSE/CMake/BuildUtils/: Backward.cmake
MSE/CMake/Utils/: DisableTargetWarnings.cmake
MSE/Docs/Templates/: CMakeLists.txt
MSE/Sandbox/Kafka-C/: Producer.c
MSE/Sandbox/kafka-c-getting-started/: README.md  consumer  producer  producer.c
MSE/Source/: Config.yaml  Main.cpp
MSE/Tools/: Build-CMake.sh  Build.sh  Clean-KeepAssets.sh
Python/: .gitignore  README.md  pyproject.toml  requirements.txt
Python/.Test/: ExampleUsage.py
Python/.Test/BrainGenix/: README.md  __init__.py
Python/Backend/: README.md
Python/Backend/Models/: README.md
Python/Backend/Server/: README.md
Python/Backend/SimulationEngine/: README.md
Python/BrainGenix/: ExampleUsage.py  pyproject.toml
Python/BrainGenix/NES/: __init__.py
Python/BrainGenix_NES.egg-info/: PKG-INFO  SOURCES.txt
Python/Docs/BlockDiagrams/: BrainGenix-NES.drawio
Python/Docs/Doxygen/: .gitignore
Python/Docs/SourceTrail/: BrainGenix-NES.srctrldb
Python/Frontend/: ClientTest.py  ExampleUsage.py
Python/Frontend/Test/: ClientTest.py
Python/System/: Config.yaml
Python/Test/: ClientTest.py  ExampleUsage.py  SimpleTest.py  Test.sh
Python/Tools/: Build.sh  Clean.sh  Install.sh  LiveTest.sh  NVenvTest.sh  Test.sh  installer.sh
Sandbox/CubeMapArrayTest/: CMakeLists.txt
Sandbox/CubeMapArrayTest/Source/: Main.cpp
Sandbox/ImageMemoryLoadTest/: CMakeLists.txt
Sandbox/ImageMemoryLoadTest/Source/: Main.cpp
Sandbox/ImageMemoryLoadTest/Tools/: Build-CMake.sh  Build.sh
Sandbox/Superbuild/: CMakeLists.txt
Sandbox/Superbuild/Tools/: Build.sh  Install.sh
Sandbox/Superbuild/cmake/: SuperBuild.cmake
Sandbox/ThreadingTest/: .gitignore  CMakeLists.txt
Sandbox/ThreadingTest/Source/: Main.cpp
Sandbox/ThreadingTest/Tools/: Build-CMake.sh  Build.sh  Run.sh
Source/Core/: CMakeLists.txt  Main.cpp  Main.h
Source/Core/Config/: ArgumentParser.cpp  ArgumentParser.h  Config.cpp  Config.h  ConfigDefaults.cpp  ConfigDefaults.h  ConfigFileParser.cpp  ConfigFileParser.h  ConfigurationManager.cpp  ConfigurationManager.h
Source/Core/Editor/: CMakeLists.txt  GUI.cpp  GUI.h
Source/Core/IO/: SonataLoader.cpp  SonataLoader.h
Source/Core/Kernel/: BrainRegion.cpp  BrainRegion.h
Source/Core/Models/: README.md
Source/Core/Netmorph/: NetmorphManagerThread.cpp  NetmorphManagerThread.h  NetmorphParameters.cpp  NetmorphParameters.h  NetmorphRPCInterface.cpp  NetmorphRPCInterface.h  README.md
Source/Core/Profiling/: Manager.cpp  Manager.h  ProfilingManager.cpp  ProfilingManager.h
Source/Core/RPC/: APIStatusCode.cpp  APIStatusCode.h  BackendServiceCommunicator.cpp  BackendServiceCommunicator.h  BackendServiceCommunicator.test.cpp  Manager.cpp  Manager.h  ManagerTaskData.h  RPCHandlerHelper.cpp  RPCHandlerHelper.h  RPCManager.cpp  RPCManager.h  RouteAndHandler.cpp  RouteAndHandler.h  SafeClient.cpp  SafeClient.h  StaticRoutes.cpp  StaticRoutes.h
Source/Core/Simulator/: Engine.cpp  Engine.h  EngineController.cpp  EngineController.h  Manager.cpp  Manager.h  bgStatusCode.h
Source/Core/SliceGenerator/: SliceGenerator.cpp  SliceGenerator.h
Source/Core/Util/: JSONHelpers.cpp  JSONHelpers.h  LogLogo.cpp  LogLogo.h  SafeContainers.h
Source/Core/VSDA/: EMRenderer.cpp  EMRenderer.h  MeshBuilder.cpp  MeshBuilder.h  MeshConversionHelpers.cpp  MeshConversionHelpers.h  RPCInterface.cpp  RPCInterface.h  RenderPool.cpp  RenderPool.h  UpdaterManager.cpp  UpdaterManager.h  VSDARPCInterface.cpp  VSDARPCInterface.h
Source/Core/Visualizer/: MeshBuilder.cpp  MeshBuilder.h  MeshRenderer.cpp  MeshRenderer.h  VisualizationRPCInterface.cpp  Visualizer.cpp  Visualizer.h  VisualizerParameters.cpp  VisualizerParameters.h  VisualizerPool.cpp  VisualizerPool.h  VisualizerRPCInterface.cpp  VisualizerRPCInterface.h
Source/Internal/ArgumentParser/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  ERS_ArgumentParser.cpp  README.md
Source/Internal/ExternalModelLoader/: CMakeLists.txt  ERS_ExternalModelLoader.cpp  ERS_ExternalModelLoader.h
Source/Internal/GPURequest/: CMakeLists.txt  ERS_GPURequest.cpp  ERS_GPURequest.h  README.md
Source/Internal/HardwareInformation/: CMakeLists.txt  ERS_HardwareInformation.cpp  ERS_HardwareInformation.h  HardwareInformation.cpp  HardwareInformation.h
Source/Internal/InputOutputSubsystem/: CMakeLists.txt  ERS_AssetIndexInputOutputManager.cpp  ERS_AssetIndexInputOutputManager.h  ERS_CompareAssetIndexDelta.cpp  ERS_CompareAssetIndexDelta.h  ERS_InputOutputSubsystem.cpp  ERS_InputOutputSubsystem.h
Source/Internal/LoggingSystem/: CMakeLists.txt  ERS_LogSystemInfo.cpp  ERS_LogSystemInfo.h  ERS_LoggingSystem.cpp  ERS_LoggingSystem.h  ERS_RGBColor.cpp  ERS_RGBColor.h  LogSystemInfo.cpp  LogSystemInfo.h  LoggingSystem.cpp  LoggingSystem.h  README.md  RGBColor.cpp  RGBColor.h
Source/Renderer/: CMakeLists.txt  Interface.cpp  Renderer.cpp  Renderer.h
System/CPP/: CMakeLists.txt
sandbox/KafkaTest/: CMakeLists.txt
sandbox/KafkaTest/src/: KafkaProducer.cpp
(+1318 files in other folders)
