[build-system]
requires = ["setuptools>=61.2", "wheel"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["BrainGenix*"]
exclude = ["Tests*"]

[project]
name = "BrainGenix-NES"
version = "0.0.1"
authors = [
  { name="BrainGenix Team", email="braingenix@carboncopies.org" },
]
description = "Python client for BrainGenix-NES simulation platform."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gitlab.braingenix.org/carboncopies/BrainGenix-NES"
"Bug Tracker" = "https://gitlab.braingenix.org/carboncopies/BrainGenix-NES/issues"
